# maa-node

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  maa  package.json  pnpm-lock.yaml  test.js  tsconfig.json
.github/workflows/: build.yml  test.yml
doc/zh_cn/: Custom.md  Package.md  README.md  Start.md
release/maa/: package.json
release/maa-darwin-arm64/: package.json
release/maa-darwin-x64/: package.json
release/maa-linux-arm64/: package.json
release/maa-linux-x64/: package.json
release/maa-node/: .npmignore  package.json  pnpm-lock.yaml  tsconfig.json
release/maa-node-darwin-arm64/: package.json
release/maa-node-darwin-x64/: package.json
release/maa-node-linux-arm64/: package.json
release/maa-node-linux-x64/: package.json
release/maa-node-win32-arm64/: package.json
release/maa-node-win32-x64/: package.json
release/maa-node/scripts/: build.mjs
release/maa-node/src/: context.ts  controller.ts  global.ts  image.ts  index.ts  instance.ts  job.ts  maa.d.ts  maa.js  pi.ts  pipeline.ts  resource.ts  syncContext.ts  task.ts  tasker.ts  types.ts
release/maa-node/types/: maa.d.ts
release/maa-win32-arm64/: package.json
release/maa-win32-x64/: package.json
release/maa/src/: maa.js
release/maa/types/: maa.d.ts
sample/: simpleLauncher.ts
scripts/: copy_release.sh
src/: main.cpp
src/config/: config.cpp
src/device/: device.cpp
src/execAgent/: execAgent.cpp
src/include/: cb.h  helper.h  info.h  loader.h  utils.h  wrapper.h
src/instance/: context.cpp  controller.cpp  instance.cpp  resource.cpp  tasker.cpp
src/task/: syncContext.cpp
src/toolkit/: find.cpp  pi.cpp
src/utility/: buffer.cpp  utility.cpp  utility.h
src/win32/: win32Window.cpp  window.cpp
test/: binding.ts  inject.ts  maa.d.ts  maa.js  maa.ts  test.js  test.ts
